# TP_ProgC

./: CMakeLists.txt
TP1/src/: binaire.c  bonjour.c  boucles.c  boucles_for.c  boucles_while.c  calculs.c  cercle.c  conditions.c  operateurs.c  pyramide.c  sizeof_types.c  variables.c
TP2/src/: bits.c  chaine.c  couleurs.c  etudiant.c  etudiant2.c  fibonacci.c  ptrvariables.c  puissance.c  tableauptr.c
TP3/src/: chercher.c  chercher2.c  couleur_compteur.c  grand_petit.c  octets.c  recherche_dichotomique.c  sizeof.c  tri.c
TP4/src/: calcule.c  chercherfichier.c  coucou_test.txt  etudiant.txt  etudiant_bd.c  factorielle.c  fichier.c  fichier.h  liste.c  liste.h  main.c  main_file.c  main_liste_couleurs.c  operator.c  operator.h  programme
TP5/src/: Makefile  client  client.c  client.h  main.c  repertoire.c  repertoire.h  serveur.c  serveur.h
TP6/src/: Makefile  bmp.c  client  client.c  couleur.c  serveur  serveur.c
gdb/: erreurs.c  erreurs_corrige.c
src/TP1/: binaire  binaire.c  bonjour.c  boucles_for  boucles_while  boucles_while.c  calculs  calculs.c  cercle  cercle.c  conditions  operateurs  operateurs.c  pyramide.c  sizeof_types  sizeof_types.c  variables  variables.c
src/TP2/: bits.c  couleurs.c  etudiant2.c  fibonacci.c  tableauptr.c
